[tool.poetry]
name = "cetus"
version = "0.1.0"
description = "Client for the Cetus API"
authors = ["Kory Kyzar <kory.kyzar@lumen.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
rich = "^10.3.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
