[tool.poetry]
name = "cetus_cearcher"
version = "0.1.1"
description = "Client for the Cetus API"
authors = ["Kory Kyzar <k2@korrosivesecurity.com>"]
readme = "README.md"
repository = "https://github.com/korrosivesec/cetus-cearcher"

[tool.poetry.scripts]
cetus = "cetus_cearcher.main:app"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
rich = "^10.3.0"
typer = "^0.3.2"
typer-cli = "^0.0.11"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^21.5b2"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
